--- a/templates/login.html
+++ b/templates/login.html
@@ -54,6 +54,10 @@
                         <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
                           <button type="submit" class="btn btn-primary btn-lg">Login</button>
                         </div>
+
+                        <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+                          <a href="{{  url_for('register.register')  }}"> register </a>
+                        </div>
       
                       </form>
       
