--- a/templates/register.html
+++ b/templates/register.html
@@ -71,6 +71,10 @@
                         <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
                           <button  type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-lg">Register</button>
                         </div>
+
+                        <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+                          <a href="{{  url_for('login.login')  }}"> already have an account ? login</a>
+                        </div>
       
                       </form>
       
